# keyrank

./: .gitignore  CLAUDE.md  docker-compose.yml  icon-generator.html
.opencode/plan/: implementation-plan-features.md
api/: .env.example  .env.production.example  README.md  composer.json
api/bootstrap/: app.php
api/config/: app.php  aso.php  cors.php  countries.php  fcm.php  plans.php  sanctum.php  services.php
api/routes/: api.php  console.php  web.php
api/tests/: TestCase.php
app/: .gitignore  README.md  analysis_options.yaml  firebase.json  pubspec.yaml
app/lib/: firebase_options.dart  main.dart
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
docs/: ARCHITECTURE.md  implementation-priorities.md  top-100-daily-refresh.md
docs/plans/: 2025-01-09-keyword-discovery-design.md  2025-01-09-keyword-discovery-implementation.md  2025-01-09-review-insights-plan.md  (+54 more)
scraper/: .dockerignore  Dockerfile  package-lock.json  package.json
scraper-py/: .env.example  .gitignore  README.md  pyproject.toml
scraper-py/deploy/: keyrank-scraper.service  supervisor.conf
scraper-py/src/: __init__.py  main.py
scraper-py/src/core/: __init__.py  config.py  llm_extractor.py  playwright_scraper.py  proxy.py
scraper-py/src/gplay/: constants.py  parser.py  router.py  scraper.py
scraper-py/src/marketplaces/: __init__.py
scraper-py/src/revenue/: acquire.py  appbusinessbrokers.py  flippa.py  microns.py  models.py  router.py  schemas.py  whatstheapp.py
scraper-py/tests/: test_api.py  test_gplay_parser.py  test_revenue.py
(+583 files in other folders)
